@@ -88,6 +88,7 @@ Changes in Bitbake 1.9.x:
 	- Don't give a stacktrace for invalid tasks, have a user friendly message (#3431)
 	- Add support for "-e target" (#3432)
 	- Fix shell showdata command (#3259)
+	- Fix shell data updating problems (#1880)
 
 Changes in Bitbake 1.8.0:
 	- Release 1.7.x as a stable series
